syntax = "proto3";

option go_package = "myGrpc/";


message Person {
  string name = 1;
  int32 id = 2;
  string email = 3;
}


service UserService {
  rpc GetByID(GetByIDRequest) returns(GetByIDResponse);
}

message GetByIDRequest {
  int64 id = 1;
}

message GetByIDResponse {
  Person user = 1;
}